--- a/devops/src/docker_flow/docker/apodeixi_server/Dockerfile
+++ b/devops/src/docker_flow/docker/apodeixi_server/Dockerfile
@@ -1,5 +1,5 @@
-ARG UBUNTU_IMAGE
-FROM ${UBUNTU_IMAGE}
+ARG _CFG__UBUNTU_IMAGE
+FROM ${_CFG__UBUNTU_IMAGE}
 RUN apt update && apt upgrade -y
 
 ARG _CFG__DEPLOYABLE_VERSION
